--- a/WalletAnalyzing/app/src/main/AndroidManifest.xml
+++ b/WalletAnalyzing/app/src/main/AndroidManifest.xml
@@ -12,10 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <meta-data android:name="AA_DB_NAME" android:value="WSDatabase.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="WSDatabase.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="1" />
 
-        <activity android:name="local.wallet.analyzing.ActivitySplash"
+        <activity
+            android:name="local.wallet.analyzing.ActivitySplash"
+            android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +30,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="local.wallet.analyzing.ActivityEnter"
-                  android:theme="@style/SplashTheme"/>
+        <activity
+            android:name="local.wallet.analyzing.ActivityEnter"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme" />
 
-        <activity android:name="local.wallet.analyzing.ActivityMain"
-                  android:theme="@style/AppTheme"/>
+        <activity
+            android:name="local.wallet.analyzing.ActivityMain"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
     </application>
 
