Add ignore local.properties

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ WalletAnalyzing/build
 WalletAnalyzing/app/build
 WalletAnalyzing/app/app.iml
 WalletAnalyzing/WalletAnalyzing.iml
+WalletAnalyzing/local.properties
