--- a/WalletAnalyzing/local.properties
+++ b/WalletAnalyzing/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 26 19:49:56 ICT 2016
-sdk.dir=D\:\\Programming\\Android\\android-sdk-windows
+#Thu Jan 28 11:18:58 ICT 2016
+sdk.dir=D\:\\Programming\\android-sdk-windows
