Add function show list transaction of Account
Has a bug in ActionBar os TransactionCreate and AccountTransaction

--- a/WalletAnalyzing/app/src/main/AndroidManifest.xml
+++ b/WalletAnalyzing/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity
             android:name="local.wallet.analyzing.ActivityMain"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="stateHidden"/>
 
     </application>
 
