--- a/WalletAnalyzing/local.properties
+++ b/WalletAnalyzing/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Feb 19 20:11:00 ICT 2016
-sdk.dir=D\:\\Programming\\Android\\android-sdk-windows
+#Tue Feb 23 14:45:25 ICT 2016
+sdk.dir=D\:\\Programming\\android-sdk-windows
