add ignore local.properties

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ WalletAnalyzing/app/build
 WalletAnalyzing/app/app.iml
 WalletAnalyzing/WalletAnalyzing.iml
 WalletAnalyzing/local.properties
+WalletAnalyzing/local.properties
