--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ WalletAnalyzing/app/app.iml
 WalletAnalyzing/WalletAnalyzing.iml
 WalletAnalyzing/local.properties
 WalletAnalyzing/local.properties
+*.properties
