--- a/WalletAnalyzing/app/build.gradle
+++ b/WalletAnalyzing/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.1'
     compile files('libs/jxl-2.6.9.jar')
     compile files('libs/ormlite-android-4.48.jar')
